[auth] Добавлено: Методы аутентификаций
