# app/Http/Requests/Api/V1/Auth/LoginRequest.php
@@ -1,0 +1,47 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Requests\Api\V1\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+/**
+ * @OA\Schema(
+ *     required={"username", "password"},
+ *      @OA\Property(
+ *         property="username",
+ *         type="string"
+ *      ),
+ *     @OA\Property(
+ *         property="password",
+ *         type="string"
+ *      ),
+ * )
+ * Class LoginRequest
+ */
+final class LoginRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules(): array
+    {
+        return [
+            'username' => 'required|string',
+            'password' => 'required|string',
+        ];
+    }
+}
