# routes/api.php
@@ -1,19 +1,17 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider within a group which
-| is assigned the "api" middleware group. Enjoy building your API!
-|
-*/
+Route::prefix(config('app.url_base_path'))->group(function () {
+    Route::prefix('auth')->group(function () {
+        Route::post('login', 'Api\Auth\LoginController')->name('api-auth-login');
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
+        Route::middleware('auth:api-student,api-employee')->group(function () {
+            Route::get('logout', 'Api\Auth\LogoutController')->name('api-auth-logout');
+            Route::get('user', 'Api\Auth\UserController')->name('api-auth-user');
+        });
+    });
+
+    Route::prefix('v1')->group(function () {
+    });
 });
